--- a/Lalisa-page/views/aboutus.html
+++ b/Lalisa-page/views/aboutus.html
@@ -107,6 +107,9 @@
             </div>
         </section>
 
+        <!-- End Banner  -->
+
+        <!-- Start : Mission  -->
         <section class="block_mission">
             <div class="container">
                 <div class="block_mission_title">
@@ -192,9 +195,121 @@
                 </div>
             </div>
         </section>
-        <section class="block_team">
+        <!-- End Mission  -->
 
+        <!-- Start: Teams  -->
+        <section class="block_team">
+            <div class="container">
+                <div class="block_team_title">
+                    <p class="block_title">Our Team</p>
+                </div>
+                <div class="box_detail_team">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="title">
+                                <p class="title_text">Meet our leading and strong team</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non purus parturient.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="list_team">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person1.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Jesse Depp</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">Founder & CEO</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person2.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Margareth Carter</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">COO</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person3.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Andrew Taggart</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">Developer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person4.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Grace Marie</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person5.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Jesse Depp</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">Senior Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_team">
+                                <div class="image">
+                                    <img src="../assets/img/person6.png" alt="">
+                                </div>
+                                <div class="name">
+                                    <p class="title_text">Jesse Depp</p>
+                                </div>
+                                <div class="position">
+                                    <p class="description_text">Marketer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+
+                <div class="talk">
+                    <div class="talk_title">
+                        <p class="title_text">Are you interested
+                            work with us?</p>
+                    </div>
+                    <div class="button_talk">
+                        <a href="#" class="btn btn_group">Let’s Talk <img src="../assets/img/arrow-right.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- End Teams  -->
     </main>
 
     <footer>
@@ -252,7 +367,6 @@
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/all.min.js"></script>
     <script src="../assets/js/header.js"></script>
-    <script src="../assets/js/about_us.js"></script>
 </body>
 
 </html>
